# Fozmo

./: .gitattributes  .gitignore  .gitleaks-worktree.toml  .gitleaks.toml  CODE_OF_CONDUCT.md  COMPONENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  build.rs  deny.toml  rust-toolchain.toml  settings.example.json
.agents/: AGENTS.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-macos.yml  verify.yml
LEGAL/: THIRD-PARTY-ASSETS.md  fozmo.spdx.json
LICENSES/: MIT.txt  fozmo.spdx.json  gpl-aggregation-policy.json
airplay-helper/: Cargo.toml  DEPENDENCY_POLICY.md  README.md  deny.toml
airplay-helper/src/: ap2.rs  backend.rs  compat.rs  discovery.rs  main.rs  pcm.rs  raop.rs  server.rs  target.rs
airplay-helper/tests/fixtures/: hegel-h390-dual-service.json
apple-music-helper/: Package.swift  README.md  build-app.sh
apple-music-helper/Resources/: Info.plist
audio_tests/: README.md  audio_smoke.rs  dsd_public_quality.rs  e3_transition_probe.rs  ecbeam2_quality.rs
audio_tests/dsd_public/: analysis.rs  external_product.rs  signals.rs
audio_tests/ecbeam2/: harness.rs
crates/fozmo-airplay-protocol/: Cargo.toml  LICENSE  README.md
docs/: Measurements.md  README.md  architecture.md  audio-pipeline.md  code-quality.md  dsd-public-quality.md  dsp.md  filter-timing-bench.md  generated-assets.md  gpl-aggregation-assessment.md  install.md  lan-pairing.md  local-data.md  macos-dev-signing.md  manual-smoke-evidence.example.md  manual-smoke-tests.md  packaging.md  platform-support.md  remote-access.md  security.md
docs/dev/: HDR-exp.md  README.md  apple-music-capture.md  apple-music-musickit-mvp.md  dsd512-dsd1024-standard-measurement.md  ecbeam2-experiment.md
docs/measurements/: dsd-public-baseline.json  dsd-public-baseline.md
drivers/fozmo-capture/: Info.plist  README.md
macos/: FozmoServer-Info.plist  README.md
macos/FozmoLauncher/: Package.resolved  Package.swift
macos/licenses/: Anton-OFL-1.1.txt  COMPONENTS.md  THIRD-PARTY-SOURCES.md
macos/release-notes/: 0.0.1.md  0.0.2.md
macos/scripts/: audit-ffmpeg.sh  build-app.sh  build-dev-dmg.sh  build-ffmpeg.sh  build-unsigned-release.sh  collect-license-notices.sh  common.sh  make-dmg.sh  make-source-archive.sh  pkg-config-opus.sh  release.sh  smoke-bundled-server.sh  verify-app.sh  verify-dmg.sh  verify-source-archive.sh
presets/: AirPods Pro 3.json  HIFIMAN Edition XS.json
scripts/: macos-sign-and-run.sh  setup-macos-dev-signing.sh
src/: agent.rs  cpu.rs  error.rs  lib.rs  library.rs  listening.rs  main.rs  rt_allocator.rs
src/agent/: capabilities.rs  control_loop.rs  identity.rs  mod.rs  prefetch.rs  range_fetch.rs  runtime.rs  stream_source.rs
src/api/: README.md  contracts.rs  error.rs  mod.rs
src/app/: README.md  auth.rs  bootstrap.rs  capabilities.rs  config.rs  error.rs  identity.rs  import.rs  mod.rs  paths.rs  rate_limit.rs  remote_tls.rs  runtime.rs  server.rs  server_remote.rs  state.rs  static_files.rs
src/audio/: debug.rs
src/diagnostics/: crash.rs  logging.rs  mod.rs  status.rs
src/playback/: README.md  airplay_volume.rs  apply_settings.rs  artist_radio.rs  auto_advance.rs  commands.rs  config.rs  config_applicator.rs  control.rs  dispatcher.rs  error.rs  hegel_control.rs  intent.rs  lastfm.rs  local.rs  mod.rs  monitor.rs  now_playing.rs  output_devices.rs  qobuz.rs  queue.rs  queue_advance.rs  request.rs  resolver.rs  router.rs  sequencer.rs  service.rs  sonos.rs  source.rs  status.rs  test_support.rs  transfer.rs  upnp.rs  upnp_dsp.rs  zone_service.rs
src/protocol/: README.md  agent.rs  mod.rs  playback.rs  signal.rs  sink.rs  source.rs  zone.rs
src/secrets/: mod.rs
src/services/: README.md  lastfm.rs  mod.rs
src/settings/: README.md  dsd.rs  mod.rs  model.rs  playback.rs  profiles.rs  store.rs  validation.rs
src/web/: ws.rs
src/zones/: README.md  active_zone_policy.rs  agent_bridge.rs  capabilities.rs  manager.rs  mod.rs  model.rs  pairing.rs  persistence.rs  registry.rs  snapshot.rs
static/: styles.css
static/react-app/: index.html
tools/: check-frontend-snapshot.sh  check-release-boundaries.sh  check-tracked-public-files.sh  check_architecture_boundaries.py  clippy.sh  dsd-perf-mac.sh  dsd64_ecbeam2_experiment.py  dsd_candidate_config.py  fozmoctl-smoke.sh  fresh-workspace-smoke.sh  gen_beam_error_profiles.py  gen_crfb.py  lan-pairing-smoke.sh  public-readiness.sh  release-inventory.sh  release-startup-smoke.sh  remote-access-smoke.sh  run-real-browser-server.sh  secret-scan.sh  test-public-readiness.sh  test-secret-scan.sh  test_dsd64_ecbeam2_experiment.py  verify.sh
tools/split_phase_v3/: README.md  __init__.py  assets.py  capture_v2.py  certify.py  finite_support.py  group_delay.py  magnitude_sdp.py  multirate_model.py  optimize_system.py  production.toml  requirements.txt  spectral_factor.py
tools/split_phase_v4/: PC_AGENT_HANDOFF.md  PC_WSL.md  README.md  __init__.py  analytic_group_delay.py  baseline.py  certify.py  character_minimax.py  cleanup_socp.py  compare_abcd.py  export_assets.py  group_delay_spline.py  magnitude_sdp.py  multirate_model.py  production.toml  rational_minimax.py  report.py  resume_checkpoint.py  run_pc_sdp.sh  runtime_capture.py  scs-3.2.11-gpu-meson.patch  spectral_factor.py  stage_runtime_assets.py  support_search.py  test_magnitude_resume.py  test_resume_checkpoint.py
tools/split_phase_v5/: .gitignore  README.md  __init__.py  build.py  c_derived_magnitude.py  e2_audio_line_search.py  e2_audio_local_search.py  e2_support_refine.py  e2_targeted_search.py  e2_v3_highres.py  e2_v4_audio_search.py  e2_v5_structural_search.py  export_e2v3_experimental.py  run_e2_pc.sh  run_e2_support_2064_pc.sh  run_e2v3_pc.sh  (+5 more)
ui/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+677 files in other folders)
